# Supervised_Learning

./: README.md
clustering/cervical+cancer+behavior+risk/: projet_cancer_cervical.ipynb
clustering/segmentation_client/: projet_segmentation_client.ipynb
projet-prediction-prix-avion/: .gitignore  README.md  pyproject.toml  requirements.txt
projet-prediction-prix-avion/deploiement/: dashboard_streamlit.py
projet-prediction-prix-avion/notebooks/: flight.ipynb
projet-prediction-prix-avion/projet-prediction-prix-avion/: pyproject.toml
projet-prediction-prix-avion/projet-prediction-prix-avion/src/projet_prediction_prix_avion/: flight.ipynb
projet-prediction-prix-avion/src/: visualisation.py
projet-prediction-prix-avion/src/projet_prediction_prix_avion/: main.py
projet_client_churn/: README.md  projet_client_churn.ipynb
projet_prix_immobilier/: README.md  Submissions.csv  Submissions2.csv  projet_prix_immobilier.ipynb  pyproject.toml
